openldap/openldap-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: openldap-ns
  labels:
    app: openldap
