openldap/openldap-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openldap-deployment
  namespace: openldap-ns
  labels:
    app: openldap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openldap
  template:
    metadata:
      labels:
        app: openldap
    spec:
      securityContext:
          fsGroup: 2000
      containers:
        - name: openldap
          image: bitnami/openldap:2.5.13-debian-11-r13
          imagePullPolicy: Never
          securityContext:
             runAsUser: 1001
             runAsGroup: 0
          readinessProbe:
            tcpSocket:
              port: 1389
            initialDelaySeconds: 15
            periodSeconds: 30
          livenessProbe:
            tcpSocket:
              port: 1389
            failureThreshold: 6
            initialDelaySeconds: 15
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5
          ports:
          - name: http
            containerPort: 1389
            protocol: TCP
          ports:
          - name: https
            containerPort: 1636
            protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 3Gi
            requests:
              cpu: 10m
              memory: 512Mi
          volumeMounts:
            - name: openldap-data
              mountPath: /bitnami/openldap/
            - name: tls
              mountPath: "/cert/"
      volumes:
        - name: openldap-data
          persistentVolumeClaim:
            claimName: openldap-volume-data-claim
        - name: tls
          csi:
            driver: csi.cert-manager.io
            readOnly: true
            volumeAttributes:
              csi.cert-manager.io/issuer-name: vault-issuer-kube
              csi.cert-manager.io/dns-names: openldap.kube.local
