openldap/openldap-service-http.yaml
apiVersion: v1
kind: Service
metadata:
  name: openldap-service-http
  namespace: openldap-ns
spec:
  selector:
    app: openldap
  ports:
    - protocol: UDP
      port: 1389
      targetPort: 1389
