openldap/openldap-service-https.yaml
apiVersion: v1
kind: Service
metadata:
  name: openldap-service-https
  namespace: openldap-ns
spec:
  selector:
    app: openldap
  ports:
    - protocol: TCP
      port: 1636
      targetPort: 1636
