openldap/openldap-ingress-https.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: openldap-ingress-https
  namespace: openldap-ns
  labels:
    app: openldap
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/custom-response-headers: "Access-Control-Allow-Origin:*||Access-Control-Allow-Methods:GET,POST,OPTIONS||Access-Control-Allow-Headers:DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range||Access-Control-Expose-Headers:Content-Length,Content-Range"
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`openldap.kube.local`)
      services:
        - name: openldap-service-https
          port: 1636
  tls:
    passthrough: true
